rimozione code smell 6+